tab spacing fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -259,74 +259,15 @@ section .link {
     --section-color: hsl(203.11, 100%, 70.25%);
 }
 
-/* --------------
-     MILESTONES
-   -------------- */
-
-.milestone-list {
-    position: relative;
-    list-style: none;
-    padding: 30px 0 15px 45px;
-}
-
-/* the vertical line */
-.milestone-list::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 13px;
-    width: 2px;
-    height: calc(100% - 5px);
-    /*  fade in the ends of the line using pixel values (instead of percentages)
-        with help from <https://stackoverflow.com/a/30425097> */
-    background:
-        linear-gradient(to bottom, var(--bg-02), var(--bg-02) 5px, var(--border-divider) 50px) top no-repeat,
-        linear-gradient(to top, var(--bg-02), var(--bg-02) 5px, var(--border-divider) 50px) bottom no-repeat;
-    background-size: 100% 50%;
-}
-
-/* the dot */
-.milestone-list li {
-    position: relative;
-}
-
-.milestone-list li + li {
-    margin-top: 3em;
-}
-
-.milestone-list li::before {
-    position: absolute;
-    top: 33px;
-    left: -38px;
-
-    content: '';
-    width: 14px;
-    height: 14px;
-    background-color: var(--text-03);
-    border-radius: 50%;
-}
-
-.milestone-date {
-    color: var(--text-03);
-}
-
-.milestone-list h3 {
-    margin-bottom: .5em;
-}
-
 /* ------------
        TABS
    ------------ */
-
-.tab-container {
-    /* margin-top: 3em; */
-}
 
 .tab-switcher-note {
     font-size: .9em;
     color: var(--text-03);
     text-align: center;
-    margin: 3em 0 .75em;
+    margin: 2.5em 0 .75em;
 }
 
 .tab-list {
@@ -431,7 +372,11 @@ section .link {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.25em;
-    margin: 0 var(--breakout-margin);
+    margin: 2.5em var(--breakout-margin);
+}
+
+.tab-switcher-note + .stats-grid {
+    margin-top: 0;
 }
 
 .stat {
@@ -562,9 +507,13 @@ section .link {
     background-color: var(--bg-03);
     border-radius: var(--border-radius);
     padding: 1.5em 1.4em 1.25em 1.6em;
-    margin: 0 0 3em;
+    margin: 2.5em 0;
     box-shadow: var(--shadow-03), var(--border-inset);
     position: relative;
+}
+
+.tab-switcher-note + .dygraph-container {
+    margin-top: 0;
 }
 
 .dygraph-graph {
@@ -698,6 +647,7 @@ section .link {
     transition: .25s var(--ease-out-quad);
     z-index: 2;
 
+    color: var(--text-02);
     background-color: var(--tip-color);
     font-weight: normal;
     text-align: left;
@@ -710,6 +660,7 @@ section .link {
 }
 
 .tooltip-date {
+    color: var(--text-01);
     font-weight: bold;
     margin-bottom: .1em;
 }
@@ -749,6 +700,61 @@ section .link {
     .dygraph-legend {
         left: 1rem;
     }
+}
+
+/* --------------
+     MILESTONES
+   -------------- */
+
+.milestone-list {
+    position: relative;
+    list-style: none;
+    padding: 30px 0 15px 45px;
+}
+
+/* the vertical line */
+.milestone-list::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 13px;
+    width: 2px;
+    height: calc(100% - 5px);
+    /*  fade in the ends of the line using pixel values (instead of percentages)
+        with help from <https://stackoverflow.com/a/30425097> */
+    background:
+        linear-gradient(to bottom, var(--bg-02), var(--bg-02) 5px, var(--border-divider) 50px) top no-repeat,
+        linear-gradient(to top, var(--bg-02), var(--bg-02) 5px, var(--border-divider) 50px) bottom no-repeat;
+    background-size: 100% 50%;
+}
+
+/* the dot */
+.milestone-list li {
+    position: relative;
+}
+
+.milestone-list li + li {
+    margin-top: 3em;
+}
+
+.milestone-list li::before {
+    position: absolute;
+    top: 33px;
+    left: -38px;
+
+    content: '';
+    width: 14px;
+    height: 14px;
+    background-color: var(--text-03);
+    border-radius: 50%;
+}
+
+.milestone-date {
+    color: var(--text-03);
+}
+
+.milestone-list h3 {
+    margin-bottom: .5em;
 }
 
 /* --------------
